# ffmpeg-webrtc-streamer

./: .gitignore  CMakeLists.txt  README.md  Setup.sh  command.txt  example_test.txt  main.cpp  run-install.sh
client/: example-client.js  index.html  package.json  server.js
client/ssl/: selfsigned.crt
examples/: example_test_1.cpp  example_test_2.cpp
ffmpeg/: Dockerfile  README.md  config.h  main.cpp
ffmpeg/custom/: EncodeAudio.c  EncodeAudio.h
ffmpeg/doc/: config.texi
ffmpeg/ffbuild/: config.fate  config.mak  config.sh
ffmpeg/ffmpeg-example/: AacCodec.cpp  AacCodec.h  AvIOContextTest.cpp  CMakeLists.txt  CustomFFEncoder.cpp  EncodeAudio.cpp  EncodeVideo.cpp  EncodeYuv420pToH264.cpp  FilteringVideo.cpp  Muxing.cpp  Note.md  OutputFFmpgeInfo.cpp  ParseDecode.cpp  PcmToAac.cpp  RTMPMuxing.cpp  ScreenRecorder.cpp  TranscodeAac.cpp  audio_fifo.cpp  simplest_ffmpeg_muxer.cpp  transcoding.cpp
ffmpeg/ffmpeg-example/include/compat/: FFmpegCompat.h
ffmpeg/fftools/: cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.h  ffmpeg_opt.c  ffplay.c  ffplay.h  readme.txt
ffmpeg/libavcodec/: codec_list.c  libx264.c  opus.c  opus.h  opusenc.c  opusenc_psy.c  utils.c
ffmpeg/libavdevice/: indev_list.c  outdev_list.c  pulse_audio_dec.c  pulse_audio_enc.c
ffmpeg/libavformat/: mux.c  protocol_list.c  protocols.c  url.h  websocket.c
ffmpeg/libavutil/: mem.c
ffmpeg/p2p/antmediaclient/AntMedia/: Constants.h  Messaging.cpp  Messaging.h
ffmpeg/p2p/antmediaclient/Audiocapturer/: MyAudioCapturer.cpp  MyAudioCapturer.h  ringbuffer.c  ringbuffer.h  wavFileReader.cpp  wavFileReader.h
ffmpeg/p2p/antmediaclient/Capturer/: CapturerTrackSource.h  H264FrameBuffer.h  VideoEncoder.cpp  test_video_capturer.h  vcm_capturer.cc  vcm_capturer.h
ffmpeg/p2p/antmediaclient/Encoder/: rtcVideoEncoder.cpp  rtcVideoEncoder.h
ffmpeg/p2p/antmediaclient/Engines/: WebSocketEngine.cpp  WebSocketEngine.h
ffmpeg/p2p/antmediaclient/WebSocket/: WebSocketHelper.cpp  WebSocketHelper.h
ffmpeg/p2p/antmediaclient/peer_connection_observer_impl/: peer_connection_observer_impl.cpp  peer_connection_observer_impl.h
ffmpeg/p2p/antmediaclient/src/: WebRTCProxyCommon.h  observers.h  precmp.h
ffmpeg/p2p/client/: example-client.js  index.html  package-lock.json
ffmpeg/p2p/client/ssl/: selfsigned.key
ffmpeg/p2p/client/video/: My-SDPs.txt.bak
ffmpeg/p2p/data_backup/client/: example-client.html  example-client.js
ffmpeg/p2p/data_backup/server/DataChannel/: data_channel_observer_impl.cpp  data_channel_observer_impl.h
ffmpeg/p2p/data_backup/server/Engines/: WebSocketEngine.cpp  WebSocketEngine.h
ffmpeg/p2p/data_backup/server/WebSocket/: WebSocketHelper.cpp  WebSocketHelper.h
ffmpeg/p2p/data_backup/server/peer_connection_observer_impl/: peer_connection_observer_impl.cpp  peer_connection_observer_impl.h
ffmpeg/p2p/server/Audiocapturer/: MyAudioCapturer.cpp  MyAudioCapturer.h  wavFileReader.cpp  wavFileReader.h
ffmpeg/p2p/server/Capturer/: CapturerTrackSource.h  H264FrameBuffer.h  SharedQueue.h  VideoEncoder.cpp  VideoEncoder.h  test_video_capturer.cc  vcm_capturer.cc  vcm_capturer.h
ffmpeg/p2p/server/Codec/: H264FrameBuffer.h  rtcVideoEncoder.cpp  rtcVideoEncoder.h
ffmpeg/p2p/server/DataChannel/: data_channel_observer_impl.cpp  data_channel_observer_impl.h
ffmpeg/p2p/server/Engines/: WebSocketEngine.cpp  WebSocketEngine.h
ffmpeg/p2p/server/UDP/: DatagramSocket.cpp  DatagramSocket.h
ffmpeg/p2p/server/WebSocket/: WebSocketHelper.cpp  WebSocketHelper.h
ffmpeg/p2p/server/peer_connection_observer_impl/: peer_connection_observer_impl.cpp  peer_connection_observer_impl.h
ffmpeg/p2p/server/src/: precmp.cpp
ffmpeg/x264/lib/pkgconfig/: x264.pc
webrtc/src/audio/: channel_send.h
webrtc/src/test/: video_renderer.cc  video_renderer.h
webrtc/src/test/linux/: glx_renderer.cc
webrtc/src/video/: video_send_stream.h
x264/: .depend  config.h  config.mak  x264
x264/common/: oclobj.h
x264/ffmpeg_build/lib/pkgconfig/: x264.pc
